add some stuff, primarily added class base :sparkles:

--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,7 @@
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot-api</artifactId>
             <version>1.8.8-R0.1-SNAPSHOT</version>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
@@ -103,12 +104,6 @@
             <groupId>com.github.ThatKawaiiSam</groupId>
             <artifactId>Assemble</artifactId>
             <version>master-105d9baddc-1</version>
-        </dependency>
-
-        <dependency>
-            <groupId>io.reactivex.rxjava3</groupId>
-            <artifactId>rxjava</artifactId>
-            <version>3.0.3</version>
         </dependency>
     </dependencies>
 
