add readme, clean some code and push older changes

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
-idea/
-target/
+# Custom .gitignore generated with https://github.com/NoSequel/gitignore-script
+
+# Maven
+dependency-reduced-pom.xml
+
+# JetBrains
+.idea/
 *.iml
+target/
